# ecore_automation

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
pages/: invoice_page.py  login_page.py
tests/: conftest.py  invoice_test.py  login_test.py
utils/: test_data.py
