[project]
name = "ecore_automation"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "playwright==1.48.0",
    "pytest-playwright==0.5.2"
]

[project.optional-dependencies]
dev = [
    "pip-tools==7.4.1",
    "ruff==0.7.4",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
